--- a/analyse_wpt_results/Cargo.toml
+++ b/analyse_wpt_results/Cargo.toml
@@ -11,3 +11,7 @@ structopt = "0.3"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
+glob = "0.3"
+tracing = "0.1"
+tracing-subscriber = "0.2"
+rayon = "1.5"
